# PhotoEditor

./: README.md
PhotoEditor/: CMakeLists.txt  main.cpp  main.qml
PhotoEditor/PhotoEditor/: CMakeLists.txt  main.cpp  main.qml
PhotoEditor/PhotoEditor/Backend/: CMakeLists.txt  EditedImageProvider.cpp  EditedImageProvider.h  PhotoActionData.cpp  PhotoActionData.h  PhotoEditionCommands.cpp  PhotoEditionCommands.h  PhotoEditor.cpp  PhotoEditor.h
PhotoEditor/PhotoEditor/CustomElements/: CMakeLists.txt  CMakeLists.txt.autosave  CombinedSlider.qml  IntegerInput.qml  PhotoDialog.qml  Section.qml  Separator.qml
PhotoEditor/PhotoEditor/Menu/: CMakeLists.txt  PhotoMenuBar.qml  PhotoToolBar.qml
PhotoEditor/PhotoEditor/View/: CMakeLists.txt  EditView.qml  HistoryView.qml
PhotoEditor/PhotoEditor/View/HistoryViewComponents/: CMakeLists.txt  HistoryFooter.qml
PhotoEditor/build-PhotoEditor-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
PhotoEditor/build-PhotoEditor-Desktop_x86_windows_msvc2022_pe_64bit-Debug/PhotoEditor/: main.qml  qmldir
PhotoEditor/build-PhotoEditor-Desktop_x86_windows_msvc2022_pe_64bit-Debug/qmltypes/: appphotoeditor_qmltyperegistrations.cpp.d
PhotoEditor/qml/: main.qml
PhotoEditor/qml/CustomElements/: PhotoDialog.qml  Section.qml
PhotoEditor/qml/Menu/: PhotoMenuBar.qml  PhotoToolBar.qml
PhotoEditor/qml/View/: EditView.qml  HistoryView.qml
PhotoEditor/qml/View/HistoryViewComponents/: CMakeLists.txt
PhotoEditor/src/: EditedImageProvider.cpp  EditedImageProvider.h  PhotoActionData.cpp  PhotoActionData.h  PhotoEditionCommands.cpp  PhotoEditionCommands.h  PhotoEditor.cpp  PhotoEditor.h  main.cpp
